log/build_2025-10-03_08-31-48/ros2_firebase_bridge/stderr.log
  File "/workspace/install/ros2_firebase_bridge/lib/python3.10/site-packages/ros2_firebase_bridge/state_publisher.py", line 27
    self.min_update_interval = 1.0  # seconds
                                   ^
SyntaxError: invalid non-printable character U+00A0

